update package name

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "version": "3.0.1",
-    "name": "react-native-root-toast",
+    "name": "marcus-react-native-root-toast",
     "description": "react native toast like component, pure javascript solution",
     "repository": {
         "type": "git",
